@@ -15,8 +15,12 @@ for documentation on this mixer library.
 The mixer can currently load Microsoft WAVE files and Creative Labs VOC
 files as audio samples, and can load MIDI files via Timidity and the
 following music formats via MikMod:  .MOD .S3M .IT .XM. It can load
-Ogg Vorbis streams as music if built with the Ogg Vorbis libraries,
+Ogg Vorbis streams as music if built with Ogg Vorbis or Tremor libraries,
 and finally it can load MP3 music using the SMPEG library.
+
+Tremor decoding is disabled by default, you can enable it by passing
+	--enable-music-ogg-tremor
+to configure, or by defining OGG_MUSIC and OGG_USE_TREMOR.
 
 The process of mixing MIDI files to wave output is very CPU intensive,
 so if playing regular WAVE files sound great, but playing MIDI files
