@@ -261,6 +261,26 @@ AC_HELP_STRING([--enable-music-ogg-shared], [dynamically load Ogg Vorbis support
         fi
     fi
 fi
+AC_ARG_ENABLE(music-ogg-tremor,
+[  --enable-music-ogg-tremor   enable OGG music via libtremor [[default=no]]],
+	      , enable_music_ogg_tremor=no)
+if test x$enable_music_ogg_tremor = xyes; then
+    AC_MSG_CHECKING(for libtremor headers)
+    have_tremor=no
+    AC_TRY_COMPILE([
+     #include <tremor/ivorbiscodec.h>
+     #include <tremor/ivorbisfile.h>
+    ],[
+    ],[
+    have_tremor=yes
+    ])
+    AC_MSG_RESULT($have_tremor)
+    if test x$have_tremor = xyes; then
+        SOURCES="$SOURCES $srcdir/*_ogg.c"
+        EXTRA_CFLAGS="$EXTRA_CFLAGS -DOGG_MUSIC -DOGG_USE_TREMOR"
+	EXTRA_LDFLAGS="$EXTRA_LDFLAGS -lvorbisidec"
+    fi
+fi
 AC_ARG_ENABLE(music-mp3,
 [  --enable-music-mp3      enable MP3 music via smpeg [[default=yes]]],
               , enable_music_mp3=yes)
