@@ -26,7 +26,11 @@
 
 /* This file supports Ogg Vorbis music streams */
 
+#ifdef OGG_USE_TREMOR
+#include <tremor/ivorbisfile.h>
+#else
 #include <vorbis/vorbisfile.h>
+#endif
 
 typedef struct {
 	int playing;
